--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
+    "openai": "^6.16.0",
     "resend": "^6.7.0"
   },
   "devDependencies": {
